# app-mono-gitops

./: .gitignore  .releaserc.json  README.md  README.v2.md  context_output.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
cdktf/: README.md  db.hcl
context/: chat-api-classes.md  gitops-rbac-explain-born.md  gitops-rbac-explain.md  how-to-start.md  open-telemetry.md  source-v2.md  what-is-argo.md  what-is-business.md  what-is-cdktf.md  what-is-clodeflare-little-deep.md  what-is-css.md  what-is-dsl.md  what-is-k8s-deep.md  what-is-pokemon-go.md  what-is-the-science-little-deep.md
docs/: gitops-backstage-refactor-spec.md
infra/: infra-root.yaml
manifests/: app-external-dns.yaml  chat-api-application.yaml  chat-api-deployment.yaml  chat-api-ingress.yaml  chat-api-secrets-sealed.yaml  chat-api-service.yaml  chat-api-vector-configmap.yaml  cluster-issuer.yaml  grafana-application.yaml  ingress-argo.yaml  litellm-configmap.yaml  litellm-deployment.yaml  litellm-secrets-sealed.yaml  litellm-service.yaml  litellm-vector-configmap.yaml  loki-application.yml  loki-pv.yaml  loki-pvc.yaml  loki-secrets-sealed.yaml  longhorn-application.yaml  nginx-application.yaml  values.yaml
misc/: README-consept.md  README-disclaimer.md  README-old.md  README-tasks.md  argocd-init.txt  context-chunk-export.sh  crewai-example.yaml  k8s-basic.sh  k8s-network-overview.sh  sexret-again.sh  sexret-again.txt
policies/: kubernetes.rego
readme/: codex-task-example.md  how-to-english.md  how-to-psy.md  source-v3.md  what-is-code-style.md  what-is-cs.md  what-is-dsl-crewai.md  what-is-economics.md  what-is-formal-language.md  what-is-k8s.md  what-is-pc-little-deep.md  (+5 more)
(+232 files in other folders)
