[project]
name = "app-release"
version = "0.1.0"
description = "AI Chat microservice with FastAPI"
readme = "README.v2.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
  {name = "Jenya", email = "kulikovyevgeny@outlook.com"}
]

dependencies = [
  "fastapi",
  "crewai",
  "httpx",
  "uvicorn",
  "pydantic",
  "python-dotenv",
  "pydantic-settings",
  "structlog",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation-fastapi",
  "PyYAML",
  "notion-client",
  "sqlmodel",
  "psycopg2-binary"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "pytest-asyncio",
  "alembic"
]

[project.urls]
"Homepage" = "https://github.com/justgithubaccount/app-release"
"Documentation" = "http://localhost:8000/docs"
"Source" = "https://github.com/justgithubaccount/app-release"

[tool.setuptools]
packages = ["apps.chat.app"]
